--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -10,18 +10,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Clone website repo to temp directory
+      - name: Git Config
+        run: |
+          git config --global user.name "GitHub Action"
+          git config --global user.email "actions@github.com"
+   
+      - name: Clone
         run: |
           git clone https://github.com/aoijs/website.git temp-website-repo
 
-      - name: Create necessary directories in current repo
+      - name: Create
         run: |
           echo "Creating directories"
           mkdir -p ./scripts/docs/functions
           mkdir -p ./scripts/docs/canvas
           mkdir -p ./scripts/docs/music
 
-      - name: Copy functions folder to current repo
+      - name: Copy
         run: |
           echo "Copying 'aoi.canvas function docs' to current repo"
           cp -r temp-website-repo/src/content/docs/extensions/@aoijs/aoi.canvas/functions/* ./scripts/docs/canvas/
@@ -37,7 +42,7 @@ jobs:
         run: |
           rm -rf temp-website-repo
           
-      - name: Commit changes
+      - name: Commit
         run: |
           git add .
           git commit -m "[workflow] Update documentation"
