--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -4,16 +4,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  download-and-save:
+  get-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Git Config
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "actions@github.com"
+          git config --local user.name "github-actions"
+          git config --local user.email "github-actions@github.com"
    
       - name: Clone
         run: |
@@ -47,3 +49,30 @@ jobs:
           git add .
           git commit -m "[workflow] Update documentation"
           git push origin main
+  update-functions:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run
+        run: cd scripts && node script.js
+
+      - name: Commit and push changes
+        run: |
+          git config --local user.name "github-actions"
+          git config --local user.email "github-actions@github.com"
+          git add docs/functions.json
+          git commit -m "[workflow] Update functions" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
