--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -49,6 +49,7 @@ jobs:
 
   update-functions:
     runs-on: ubuntu-latest
+    needs: get-docs
 
     steps:
       - name: Checkout code
@@ -58,6 +59,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18"
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install
