--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -124,5 +124,5 @@ jobs:
         if: success()
         run: |
           curl -H "Content-Type: application/json" \
-          -d '{"content": "meow <@428188716641812481>, please confirm the api changes!"}' \
+          -d '{"content": "meow <@428188716641812481>, please confirm the [api changes](https://github.com/faf4a/aoijs-api/pulls)!"}' \
           ${{ secrets.DISCORD_WORKFLOW }}
