--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   get-docs:
     runs-on: ubuntu-latest
+    outputs:
+      changes_made: ${{ steps.commit.outputs.changes_made }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -47,8 +49,10 @@ jobs:
           if ! git diff-index --quiet HEAD; then
             git commit -m "[workflow] Update documentation"
             git push origin main
+            echo "::set-output name=changes_made::true"
           else
             echo "No changes to commit"
+            echo "::set-output name=changes_made::false"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -56,6 +60,7 @@ jobs:
   update-functions:
     runs-on: ubuntu-latest
     needs: get-docs
+    if: needs.commit.outputs.changes_made == 'true'
 
     steps:
       - name: Checkout code
