--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -46,13 +46,15 @@ jobs:
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
           git add .
+          
           if ! git diff-index --quiet HEAD; then
             git commit -m "[workflow] Update documentation"
             git push origin main
-            echo "::set-output name=changes_made::true"
+            echo "changes_made=true" >> $GITHUB_ENV
+            echo 'Changes are made'
           else
             echo "No changes to commit"
-            echo "::set-output name=changes_made::false"
+            echo "changes_made=false" >> $GITHUB_ENV
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -60,7 +62,7 @@ jobs:
   update-functions:
     runs-on: ubuntu-latest
     needs: get-docs
-    if: needs.commit.outputs.changes_made == 'true'
+    if: env.changes_made == 'true'
 
     steps:
       - name: Checkout code
