--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   get-docs:
     runs-on: ubuntu-latest
+    outputs:
+      changes_made: ${{ steps.commit.outputs.changes_made }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -49,11 +51,11 @@ jobs:
           if ! git diff-index --quiet HEAD; then
             git commit -m "[workflow] Update documentation"
             git push origin main
-            echo "changes_made=true" >> $GITHUB_ENV
-            echo "Changes are made"
+            echo "::set-output name=changes_made::true"
+            echo "true"
           else
-            echo "No changes to commit"
-            echo "changes_made=false" >> $GITHUB_ENV
+            echo "::set-output name=changes_made::false"
+            echo "false"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -61,7 +63,7 @@ jobs:
   update-functions:
     runs-on: ubuntu-latest
     needs: get-docs
-    if: ${{ env.changes_made == 'true' }}
+    if: env.changes_made == 'true'
 
     steps:
       - name: Checkout code
