--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -122,6 +122,7 @@ jobs:
         run: |
           cd temp-api-repo
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/faf4a/aoijs-api.git
+          git pull --rebase origin master
           git push origin master:refs/heads/update-functions-${{ steps.pr-count.outputs.pr_count }}
           gh pr create --title "[workflow] Update functions.json" --body "hello, i am a bot! please merge the api changes." --repo faf4a/aoijs-api --head update-functions-${{ steps.pr-count.outputs.pr_count }} --base master
         env:
