--- a/.github/workflows/getdocs.yml
+++ b/.github/workflows/getdocs.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
+          git pull
           git add .
           
           if ! git diff-index --quiet HEAD; then
