--- a/.github/workflows/themes.yml
+++ b/.github/workflows/themes.yml
@@ -3,7 +3,7 @@ name: Fetch Themes
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 */12 * * *'
 
 jobs:
   fetch-themes:
